--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,16 @@ table * {
 }
 
 table td {
-  /* border: solid 1px #ccc; */
   padding: 4px 6px;
+}
+
+table td a {
+  color: inherit;
+  text-decoration: none;
+}
+
+table td a:hover {
+  text-decoration: underline;
 }
 
 table td:not(*:first-child, *:last-child) {
