--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,13 @@ table {
   border-bottom: solid 4px #eee;
 }
 
+p code {
+  background: #eee;
+  padding: 0px 2px;
+  border: solid 1px #ddd;
+  border-radius: 2px;
+}
+
 table * {
   white-space: nowrap;
 }
