--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,12 @@ table thead tr {
   background-color: #333;
   color: white;
 }
+
+.BugLink {
+  color: inherit;
+  text-decoration: none;
+}
+
+.BugLink:hover {
+  text-decoration: underline;
+}
